--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hoshaiah.github.io/batch13-fe-activities/crab/"
+  "homepage": "https://hoshaiah.github.io/crab/",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
