--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hoshaiah.github.io/crab/",
+  "homepage": "https://hoshaiah.github.io/batch13-fe-activities/crab/",
   "devDependencies": {
     "gh-pages": "^3.2.3"
   }
